--- a/data-engineer.html
+++ b/data-engineer.html
@@ -56,7 +56,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Skechers1/743999692386948-senior-data-engineer'>Skechers Senior Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Skechers1/743999692386948-senior-data-engineer'>Skechers Senior Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Manhattan Beach</span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -68,7 +68,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.lever.co/lamudi/392cd70c-b03b-413e-b8ca-3d0b7cb1df48'>Lamudi - Data Engineer</a></h5> 
+<h5><a href='https://jobs.lever.co/lamudi/392cd70c-b03b-413e-b8ca-3d0b7cb1df48'>Lamudi - Data Engineer</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -84,7 +84,7 @@
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://boards.greenhouse.io/riskiq/jobs/1788906'>Job Application for Data Engineer  at RiskIQ</a></h5> 
+<h5><a href='https://boards.greenhouse.io/riskiq/jobs/1788906'>Job Application for Data Engineer  at RiskIQ</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-28</p>
 <hr/>
@@ -156,7 +156,7 @@ Assemble large?...</p>
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/SteppingUpSolutions/88469518-lead-data-engineer'>Stepping Up Solutions  Lead Data Engineer | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/SteppingUpSolutions/88469518-lead-data-engineer'>Stepping Up Solutions  Lead Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -187,7 +187,7 @@ Connecticut. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Washington, DC</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<h5><a href='https://jobs.crelate.com/portal/averityteam/job/keecfjo3d6kzeik6d9ffuaqqne'>Data Engineer - Automotive | Averity</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.crelate.com/portal/averityteam/job/keecfjo3d6kzeik6d9ffuaqqne'>Data Engineer - Automotive | Averity</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -203,7 +203,7 @@ Connecticut. Review all of the job details and apply today!</p>
 <p><span class="badge badge-light">Canada</span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692349818-data-engineer'>Ubisoft Data Engineer | SmartRecruiters</a></h5> 
+<h5><a href='https://jobs.smartrecruiters.com/Ubisoft2/743999692349818-data-engineer'>Ubisoft Data Engineer | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Posted on: 2019-07-26</p>
 <hr/>
@@ -373,7 +373,7 @@ with the role for which you're applying??. Please tell us why you selected such 
 <p><span class="badge badge-light">New York, NY</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/cmdb-data-engineer-78275'>CMDB Data Engineer - Johnson Controls Careers</a></h5> 
+<h5><a href='https://johnsoncontrols.referrals.selectminds.com/jobs/cmdb-data-engineer-78275'>CMDB Data Engineer - Johnson Controls Careers</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>6 days ago ... The JCI Service Management team is seeking a Configuration Management Data 
 Engineer for managing the CMDB (Configuration Management Database)?...</p>
@@ -386,7 +386,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light">Munich Munich London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://datatonic.workable.com/j/7D36E4E05A'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
+<h5><a href='https://datatonic.workable.com/j/7D36E4E05A'>Datatonic - Jobs: Data Engineer - Apply online</a></h5> 
 <p><span class="badge badge-light">London, England, United Kingdom London</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -406,7 +406,7 @@ Engineer for managing the CMDB (Configuration Management Database)?...</p>
 <p><span class="badge badge-light">San Francisco</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
-<h5><a href='https://3m.wd1.myworkdayjobs.com/en-US/Search/job/US-Minnesota-Maplewood/Sr-Data-Engineer----Maplewood--MN-_R00967815'>Sr. Data Engineer ? (Maplewood, MN)</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://3m.wd1.myworkdayjobs.com/en-US/Search/job/US-Minnesota-Maplewood/Sr-Data-Engineer----Maplewood--MN-_R00967815'>Sr. Data Engineer ? (Maplewood, MN)</a></h5> 
 <p><span class="badge badge-light"></span></p>
 <p>Jul 8, 2019 ... A successful candidate will work side-by-side with engineers and scientists in 
 broad disciplines from software, artificial intelligence/machine learning, electronic
@@ -430,7 +430,7 @@ the job details and apply today!</p>
 <p>Jul 10, 2019 ... 0839 095 Y478 0000|Technology Division|Core Engineering|Data Intelligence|
 Core Engineering is now hiring a Data Engineer (DIO - Edge) - Client Data?...</p>
 <hr/>
-<h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer'>Senior Data Engineer - Fractal Analytics - Career Page</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='http://fractalanalytics.applytojob.com/apply/jLAj2ROWrk/Senior-Data-Engineer'>Senior Data Engineer - Fractal Analytics - Career Page</a></h5> 
 <p><span class="badge badge-light">Mumbai Maharashtra, India</span></p>
 <p>Posted on: 2019-07-23</p>
 <hr/>
@@ -453,7 +453,7 @@ talk to?...</p>
 <p>Jul 15, 2019 ... Tracer is a marketing data aggregation and reporting platform. Our technology 
 was born out of the challenges facing today's marketers. Incubated within?...</p>
 <hr/>
-<h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999679257626-data-engineer-genomics-'>Kelly Services Data Engineer (Genomics) | SmartRecruiters</a></h5> 
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script> <ins class="adsbygoogle"     style="display:block"     data-ad-format="fluid"     data-ad-layout-key="-hl+a-w-1e+66"     data-ad-client="ca-pub-1428030944818570"     data-ad-slot="5652379877"></ins><script>     (adsbygoogle = window.adsbygoogle || []).push({});</script> <hr/><h5><a href='https://jobs.smartrecruiters.com/KellyServicesEu/743999679257626-data-engineer-genomics-'>Kelly Services Data Engineer (Genomics) | SmartRecruiters</a></h5> 
 <p><span class="badge badge-light">Cambridge, UK</span></p>
 <p>Posted on: 2019-07-22</p>
 <hr/>
